# dcc-poc

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: federator_sim_rules.yaml  loire_required_fields.yaml  mapping_healthdcat_to_loire.yaml
pipeline/: __init__.py  compliance.py  config_loader.py  explain_fix.py  ingest_validate.py  mapper.py  orchestrator.py  patcher.py  report.py
prompts/: fix_prompt.txt  system_prompt.txt
samples/: bad_health_dcat_missing_fields.json  good_health_dcat.json
tests/: test_patcher.py  test_pipeline_smoke.py
